fixed spaced practice icon alignment

--- a/resources/styles/components/exercise/group.less
+++ b/resources/styles/components/exercise/group.less
@@ -5,11 +5,6 @@
   padding-top: 0;
 	text-align: right;
 
-	i.icon-spaced_practice {
-		top: 3px;
-		position: absolute;
-	}
-
 	i.fa {
 		display: inline-block;
 		margin: 0 5px;
